--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obsidize-semver",
-  "version": "1.0.0",
+  "name": "@obsidize/semver",
+  "version": "1.0.1",
   "description": "Middleware to compare semver strings and not cause error explosions on malformed input",
   "license": "MIT",
   "main": "index.cjs.js",
